# Azz

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmd_example  example_json.json  partitions_example.csv  sdkconfig  sdkconfig.defaults  spiffs_telegram_bot.json
components/player/: CMakeLists.txt  component.mk  esp_player_wrapper.c
components/player/include/: esp_player_wrapper.h
main/: Authorization.c  CMakeLists.txt  Kconfig.projbuild  UrlDecoder.c  audio_setup.c  azz_parser.c  component.mk  ds1302.c  esp_rest_main.c  nvs_data.c  rest_server.c  sntp_server_time.c  telegram_bot.c
main/include/: Authorization.h  UrlDecoder.h  audio_setup.h  azz_parser.h  rest_server.h  sntp_server_time.h  telegram_bot.h
